--- a/_includes/lang-splash-banner.html
+++ b/_includes/lang-splash-banner.html
@@ -1,43 +1,50 @@
-<div class="js-splash--banner-container">
-    <div class="js-splash--banner-title" style="font-size: 5rem; margin-top: 0; margin-bottom: 2rem; font-weight: 300; font-family:'Open sans',verdana,arial,sans-serif;">
-    {% if page.language == "plotly_js" %}
-      plotly.js
-    {% endif %}
-    </div>
-    <div class="js-splash--banner-subtitle" style="font-size: 2.2rem; letter-spacing: 0.3px; font-weight: 100;  margin-top: 0; margin-bottom: 2rem; font-weight: 300; font-family:'Open sans',verdana,arial,sans-serif;">
-    {% if page.language == "nodejs" or page.language == "julia" or page.language == "dashboards" %}
-  	    <h5 style="font-size:30px; color: rgb(255,255,255);">plotly is free for unlimited public use</h6>
-          <a class="button" href="https://plot.ly/products/cloud/" target="_blank" style="text-decoration: none;font-size: 14px;padding: 12px 24px;">SIGN UP FOR FREE</a>
-  	    <h6 style="color: rgb(255,255,255);" style="text-align: center;">
-  		    Sensitive data? Upgrade to a <a style="color: #ABB9D2;" href="https://plot.ly/products/cloud/">paid plan</a>
-  	    </h6>
+<div class="header-large--wrap">
+    <div class="header--blue-bg">
+        <div class="--image"></div>
+        <div class="header--meta-content">
+                {% if page.language == "plotly_js" %}
+                    <h2 class="special-header">
+                        plotly.js
+                    </h2>
+                {% endif %}
 
-    {% elsif page.language == "plotly_js" %}
-            <h5 style="font-size:30px; color: rgb(255,255,255);">The open source JavaScript graphing library that powers plotly</h5>
-    {% elsif page.title == "Plot Twist" %}
-            <h5 style="font-size:30px; color: rgb(255,255,255);">Plot Twist</h5>
+            {% if page.language == "nodejs" or page.language == "julia" or page.language == "dashboards" %}
+            <p>
+                Plotly is free for unlimited public use.
+                <a class="button" href="https://plot.ly/products/cloud/" target="_blank">Sign up for free!</a>
+            </p>
 
-    {% else %}
-        <div style="padding-top: 30px;">
-          <h6 style="font-size:30px; color: rgb(255,255,255);">Plotly for {{ page.language | capitalize }} is now entirely open source, free, and self-hosted</h6>
-          <h5 style="font-size:30px; color: rgb(255,255,255);" style="text-align: center;">
-            Learn more about <a style="color: #ABB9D2;" href="https://plot.ly/javascript/open-source-announcement">why we've open sourced</a>
-          </h5>
+                <p>
+                    Sensitive data? Upgrade to a <a href="https://plot.ly/products/cloud/">paid plan</a>
+                </p>
+
+                {% elsif page.language == "plotly_js" %}
+                <p>The open source JavaScript graphing library that powers plotly</p>
+                {% elsif page.title == "Plot Twist" %}
+                <p>Plot Twist</p>
+                {% else %}
+                    <p>Plotly for {{ page.language | capitalize }} is now entirely open source, free, and self-hosted</p>
+                    <p>
+                        Learn more about <a href="https://plot.ly/javascript/open-source-announcement">why we've open sourced</a>
+                    </p>
+                </p>
+                {% endif %}
+
+            <div class="github-star">
+                {% if page.language == "plotly_js" %}
+                <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.js&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                {% elsif page.language == "ggplot2" %}
+                <iframe src="https://ghbtns.com/github-btn.html?user=ropensci&repo=plotly&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                {% elsif page.language == "matlab" %}
+                <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=matlab-api&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                {% elsif page.language == "matplotlib" %}
+                <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.py&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                {% elsif page.language == "python" %}
+                <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.py&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                {% elsif page.language == "r" %}
+                <iframe src="https://ghbtns.com/github-btn.html?user=ropensci&repo=plotly&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                {% endif %}
+            </div>
         </div>
-    {% endif %}
     </div>
-    
-    {% if page.language == "plotly_js" %}
-       <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.js&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-    {% elsif page.language == "ggplot2" %}
-       <iframe src="https://ghbtns.com/github-btn.html?user=ropensci&repo=plotly&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-    {% elsif page.language == "matlab" %}
-       <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=matlab-api&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-    {% elsif page.language == "matplotlib" %}
-       <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.py&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-    {% elsif page.language == "python" %}
-       <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.py&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-    {% elsif page.language == "r" %}
-       <iframe src="https://ghbtns.com/github-btn.html?user=ropensci&repo=plotly&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-    {% endif %}
 </div>
