--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     	<!-- Fonts -->
-    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/fonts/font-awesome/css/font-awesome.min.css" />
-        <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/plotly_icons.css" />
+    	<link rel="stylesheet" type="text/css" href="/fonts/font-awesome/css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="/css/plotly_icons.css" />
         <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
 	    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         
@@ -16,25 +16,28 @@
         <script src="//cdn.plot.ly/plotly-latest.min.js"></script>
 
     	<!-- Stylesheets -->
-        <link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash-highlight.css"/>
-    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/normalize.css">
-    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/base.css">
-    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/layout_block.css">
-    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/modules.css">
-    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
-        <link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash.css"/>
-        
-        {% if page.page_type == "ipython" %}
-        <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/ipython_notebook.css">
-        {% else %}
-        <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/api_docs.css">
-        {% endif %}
-        {% if page.page_type == "reference" %}
-        <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/reference.css">
-        {% endif %}
+        <!--<link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash-highlight.css"/>-->
+    	<!--<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/normalize.css">-->
+    	<!--<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/base.css">-->
+    	<!--<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/layout_block.css">-->
+    	<!--<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/modules.css">-->
+    	<!--<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">-->
+        <!--<link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash.css"/>-->
+
+        <link rel="stylesheet" type="text/css" href="/styles/normalize.css">
+        <link rel="stylesheet" type="text/css" href="/styles/main.css">
+
+        <!--{% if page.page_type == "ipython" %}-->
+        <!--<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/ipython_notebook.css">-->
+        <!--{% else %}-->
+        <!--<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/api_docs.css">-->
+        <!--{% endif %}-->
+        <!--{% if page.page_type == "reference" %}-->
+        <!--<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/reference.css">-->
+        <!--{% endif %}-->
 
     	<!-- Icon -->
-    	<link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" type="image/x-icon" />
+    	<link rel="shortcut icon" href="/images/plotly-ico.png" type="image/x-icon" />
 
     	<!-- META TAGS -->
     	{% include seo.html %}
@@ -42,4 +45,9 @@
     	<!-- code highlighting -->
     	<!--<link rel="stylesheet" href="{{site.staticurl}}/javascripts/codehighlight/styles/tomorrow.css">-->
         {% include analytics.html %}
-	</head>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+
+    </head>
+
