--- a/_layouts/langindex.html
+++ b/_layouts/langindex.html
@@ -2,86 +2,83 @@
 <html>
 {% include head.html %}
 <body>
+{% include lang-splash-banner.html %}
 
-<div id="header" style="
-  background-image: url('https://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 100%;
-  background-position: center top;
-  width: 100%;
-  height: 350px;
-  position: relative;
-  ">
+{% include _new/_page-components/_header-main.html %}
 
-	{% include header.html %}
-  <div style="
-    background-image: linear-gradient(0deg, rgba(100,91,158, 0.89)  0%, rgba(58,124,187, 0.89) 100%);
-    width: 100%;
-    height: 100%;
-  "></div>
-  
-    <!-- Lang Banner -->
-    {% include lang-splash-banner.html %}
-</div> 
-<!-- </banner> -->
+{% include breadcrumb.html %}
 
-    <!-- sitemap -->
-    {% include navigation-bar.html %}
+<main class="--page page--single --index">
 
-    <!-- sidebar -->
-    {% if page.page_type == "reference" %}
-    {% include reference-side-nav.html %}
-    {% elsif page.nosidebar %}
-    <!-- If this tag is set to true in the page, it will not apply sidebar -->
-    {% else %}
-    {% include side-bar.html %}
-    {% endif %}
-		
-	
+    <div class="--wrap">
+        <!-- aside - Main Sidebar-->
+        {% if page.page_type == "reference" %}
+        {% include reference-side-nav.html %}
+        {% elsif page.nosidebar %}
+        <!-- If this tag is set to true in the page, it will not apply sidebar -->
+        {% else %}
+        {% include side-bar.html %}
+        {% endif %}
+        <!-- Main-->
+        <section class="--page-body --tutorial-index">
+
+            <!-- Start pulling content -->
+            {{ content }}
+            <!--End content -->
+        </section>
+    </div>
+
+</main>
+{% include helpbox.html %}
+
+{% include _new/_page-components/_footer-main.html %}
 
 
-<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-<script type="text/javascript">
-<!-- pin the sidebar to the top -->
-$(function() {
+<script>
+    $(window).scroll(function () {
+        var scroll = $(window).scrollTop();
 
-    var $window    = $(window),
-        $header    = $("#header");
-    
-    function setHeight() {
-      if($("#sidebar").length){
-          var $sidebar   = $("#sidebar");
-          var $top = Math.max(50,(($header.height() + 50) - $window.scrollTop()));
-      } 
+        //>=, not <=
+        if (scroll >= 100) {
+            $(".header-main").addClass("affix");
+        } else if (scroll <= 99) {
+            $(".header-main").removeClass("affix");
+        }
+    }); //missing );
 
-      else if($("#reference-side-nav").length){
-          var $sidebar   = $("#reference-side-nav");
-          var $top = Math.max(0,(($header.height() + 60) - $window.scrollTop())); 
-      }
+    $("a[href^='#']").on('click', function(event) {
+        var target;
+        target = this.hash;
 
-      else{
-          var $sidebar = null; // dont do anything, if no sidebars
-          var $top = 0;
-      }
-      
-      $sidebar.css({top: $top});
-    }
-    setHeight();
-    $window.scroll(setHeight);
-});
+        event.preventDefault();
+
+        var navOffset;
+        navOffset = 148;
+
+        return $('html, body').animate({
+            scrollTop: $(this.hash).offset().top - 128
+        }, 300, function() {
+            return window.history.pushState(null, null, target);
+        });
+    });
+
+    // to top right away
+    if (window.location.hash) scroll(0, 0);
+    // void some browsers issue
+    setTimeout(function () {
+        scroll(0, 0);
+    }, 1);
+
+    // any position
+    $(function () {
+        // *only* if we have anchor on the url
+        if (window.location.hash) {
+            // smooth scroll to the anchor id
+            $('html, body').animate({
+                scrollTop: ($(window.location.hash).offset().top - 148) + 'px'
+            }, 1000, 'swing');
+        }
+    });
 </script>
-
-<div class="js-splash--container {% if page.nosidebar %}no-side-bar{% endif %}"
- {% if page.page_type == 'reference' %}style="margin-left:280px;"{% endif %}>
-					{{ content }}
-</div>
-
-{% if page.language == "plotly_js" %}
-<div class="sponsor">Distribution powered by</div>
-<a target="_blank" href="https://www.fastly.com/"><img src="https://www.fastly.com/sites/default/files/fastly_logo.png" alt="Fastly"></a>
-{% endif %}
-{% include footer.html %}
-
 </body>
 </html>
