--- a/_layouts/user-guide.html
+++ b/_layouts/user-guide.html
@@ -1,51 +1,238 @@
 <!DOCTYPE html>
 <html>
+<head>
 	{% include head.html %}
-	<head>
-	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
-	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/ipython-notebook-base.css">
-	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/ipython-notebook-custom.css">
-	</head>
 
-	<body>
-	<div id="header" style="
-  background-image: url('https://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 100%;
-  background-position: center top;
-  width: 100%;
-  height: 350px;
-  position: relative;
-  ">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+</head>
 
-	{% include header.html %}
-  <div style="
-    background-image: linear-gradient(0deg, rgba(100,91,158, 0.89)  0%, rgba(58,124,187, 0.89) 100%);
-    width: 100%;
-    height: 100%;
-  "></div>
-  
-    <!-- Lang Banner -->
-    {% include lang-splash-banner.html %}
+<body data-spy="scroll" data-target=".watch" style="position:relative;">
 
-</div>
+<!--[if lt IE 10]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+	your browser</a> to improve your experience.</p>
+<![endif]-->
 
-    <!-- sitemap -->
-    {% include navigation-bar.html %}
+{% include lang-splash-banner.html %}
 
-		<div class="allcontent">
-			
-			<div class="sectionseparator_white">
-				<div class="container">
+{% include _new/_page-components/_header-main.html %}
+
+{% include breadcrumb.html %}
 
 
+<main class="--page page--single --index">
 
-					{{ content }}
+	<div class="--wrap">
+		<!-- aside - Main Sidebar-->
+		<aside class="--sidebar-container">
+			<div class="--sidebar-fixed reference" data-spy="affix" data-offset-top="194" data-offset-bottom="610" id="where">
+				<header class="--sidebar-header">Navigation</header>
+				<nav class="--sidebar-body watch"   id="where">
+					<ul class="--sidebar-list">
 
-				</div>
+						<li class="--sidebar-item">
+							{% include search-suggestions.html %}
+						</li>
+					</ul>
+					<button class="--btn back">
+						<div class="icon">Icon</div>
+						<span><a href="/tutorials/">Back to Tutorials</a></span>
+					</button>
+				</nav>
 			</div>
-		</div>
-    {% include footer.html %}
-	</body>
+		</aside>
+		<!-- Main-->
+		<section class="--page-body --tutorial-index --base">
+			<header class="--welcome">
+				<div class="--welcome-body">
+					<!--div.--wrap-inner-->
+					<div class="--title">
+						<div class="--category-img">
+
+							{% if page.language == "excel" %}
+							<img src="http://plot.ineffable.co/images/excel-logo.png" alt="">
+							{% endif %}
+							{% if page.language == "python" %}
+							<img src="https://plot.ly/gh-pages/documentation/static/images/python-small.png" style="margin-top: -30px;" alt="">
+							{% endif %}
+							{% if page.language == "pandas" %}
+							<img src="https://plot.ly/gh-pages/documentation/static/images/pandas-small.png" alt="">
+							{% endif %}
+							{% if page.language == "matlab" %}
+							<img src="https://images.plot.ly/language-icons/api-home/matlab-logo.png" alt="">
+							{% endif %}
+							{% if page.language == "r" %}
+							<img src="https://images.plot.ly/language-icons/api-home/r-logo.png" alt="">
+							{% endif %}
+							{% if page.language == "matplotlib" %}
+							<img src="https://images.plot.ly/language-icons/api-home/matlab-logo.png" alt="">
+
+							{% endif %}
+							{% if page.language == "ggplot2" %}
+							<img src="http://help.plot.ly/images/plotly-hist-logo_150w.png" alt="">
+							{% endif %}
+							{% if page.language == "plotly_js" %}
+							<img src="https://images.plot.ly/language-icons/api-home/js-logo.png" alt="Plotly.js">
+							{% endif %}
+
+							{% if page.language == "nodejs" %}
+							<img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="Nodejs">
+							{% endif %}
+
+						</div>
+						<div class="--body">
+							{% if page.language != "r" %}
+							{% unless page.ignore_header %}
+							<h1>
+								{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}
+							</h1>
+							<p>{{page.description}} </p>
+
+							{% endunless %}
+							{% include lang-navigation.html %}
+							{% endif %}
+						</div>
+					</div>
+				</div>
+			</header>
+
+			<!-- Start Plotly Basics Section -->
+			<section class="tutorial-content">
+				{{ content }}
+			</section>
+			<!--End Plotly Basics Section-->
+		</section>
+	</div>
+
+</main>
+
+{% include helpbox.html %}
+
+{% include _new/_page-components/_footer-main.html %}
+
+<script>
+
+
+
+	var array = [];
+
+
+	$('h4').each(function (i, e) {
+		array.push($(e).text());
+	});
+
+	$('*').not('p').prev('p').addClass('last');
+
+
+	$(".--sidebar-list").html(array.map(function(value) {
+		var hash = value.replace(/[^a-z0-9\s]/gi, '').replace(/[_\s]/g, '-').toLowerCase();
+		return('<li class="--sidebar-item"><a href="#' + hash + '">' + value + '</a></li>');
+	}).join(""));
+
+
+	$("a[href^='#']").on('click', function(event) {
+		var target;
+		target = this.hash;
+
+		event.preventDefault();
+
+		var navOffset;
+		navOffset = 148;
+
+		return $('html, body').animate({
+			scrollTop: $(this.hash).offset().top - 128
+		}, 300, function() {
+			return window.history.pushState(null, null, target);
+		});
+	});
+	$("h4").append( "\<div class=\"icon copy\" data-tooltip=\"Click to copy direct link\"><svg style=\"width:24px;height:24px\" viewBox=\"0 0 24 24\"><path fill=\"#000000\" d=\"M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z\"/> </svg> </div>");
+
+	console.log('This would be the main JS file.');
+
+	// to top right away
+	if (window.location.hash) scroll(0, 0);
+	// void some browsers issue
+	setTimeout(function () {
+		scroll(0, 0);
+	}, 1);
+
+	// any position
+	$(function () {
+		// *only* if we have anchor on the url
+		if (window.location.hash) {
+			// smooth scroll to the anchor id
+			$('html, body').animate({
+				scrollTop: ($(window.location.hash).offset().top - 148) + 'px'
+			}, 1000, 'swing');
+		}
+	});
+
+
+	// Smooth Scroll
+
+
+	// Mobile Menu toggle
+
+	$('.mobile-menu-btn').on('click', function (e) {
+		$('header.header-main').toggleClass("mobile-menu");
+		$('body').toggleClass("no-scroll");
+	});
+
+
+	// Copy link to section on page
+
+	$('.copy').on('click', function (e) {
+		var link = $(this).prev();
+		copyToClipboard(link);
+		console.log('element: ' + link)
+
+		$(this).attr('data-tooltip', 'Copied!');
+
+	});
+
+	$(".copy").hover(
+			function () {
+				//$(this).attr('data-tooltip', 'Copied!');
+			},
+			function () {
+				$(this).attr('data-tooltip', 'Click to copy direct link.');
+			}
+	);
+
+	function copyToClipboard(element) {
+		var $temp = $("<input>");
+		$("body").append($temp);
+
+		$temp.val(window.location.href.split('#')[0] + $(element).attr("href")).select();
+		document.execCommand("copy");
+		$temp.remove();
+		console.log('yes');
+	}
+	$('.toggle-sidebar').on('click', function (e) {
+		$('.--sidebar-container').toggleClass("show");
+		$('.toggle-sidebar').toggleClass("on");
+
+	});
+	$('.--sidebar-container').not('.toggle-sidebar').on('click', function (e) {
+		$('.--sidebar-container').removeClass("show");
+		$('.toggle-sidebar').removeClass("on");
+		//console.log('clicked');
+	});
+
+	// Sidebar toggle
+	$(document).ready(function() {
+
+
+	});
+
+
+
+
+
+
+
+</script>
+</body>
+
 </html>
