updates + fully buildable

--- a/_includes/plotschema-reference.html
+++ b/_includes/plotschema-reference.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="four columns">
-        <div class="toc">
+        <div class="toc" data-spy="affix" data-offset-top="128" data-offset-bottom="610">
             <a href="#{{trace[0]}}"><h4>{{trace[0]}}</h4></a>
             {% assign attribute=trace[1].attributes %}
             {% assign localparentlink=trace[0] %}
