--- a/scss/_components/_sidebar.scss
+++ b/scss/_components/_sidebar.scss
@@ -62,6 +62,7 @@ aside {
       z-index: 99;
       max-height: calc(100vh - 128px);
       overflow-y: auto;
+      overflow-x: hidden;
       &.affix {
         top: calc(80px + 48px) !important;
         z-index: 1;
@@ -71,8 +72,8 @@ aside {
         position: absolute;
         top: 0;
       }
-      nav:last-child {
-        padding-bottom: $unit*8;
+      & > *:last-child {
+        margin-bottom: $unit*8;
       }
     }
     .\--sidebar-body {
