--- a/scss/_pages/_tutorial-single.scss
+++ b/scss/_pages/_tutorial-single.scss
@@ -1,235 +1,37 @@
 $gray-dark: #626262;
-//
-//.container {
-//  max-width: 100%;
-//  padding: $unit*2;
-//  h1 {
-//    font-size: 4rem;
-//    color: $blue;
-//  }
-//  h5 {
-//    font-size: 3rem;
-//    padding: $unit*2 0;
-//    border-top: $border;
-//    margin-top: $unit*2;
-//  }
-//  .cell.border-box-sizing.text_cell.rendered:nth-last-of-type(2) {
-//    border-top: $border;
-//  }
-//  .cell.border-box-sizing.text_cell.rendered:last-of-type {
-//    padding-bottom: $unit*4;
-//    a {
-//      display: inline-block;
-//      padding: 0 3px;
-//    }
-//  }
-//}
-
-//.\--other-lang {
-//  padding-bottom: $unit*2;
-//  margin-bottom: $unit*2;
-//  border-bottom: $border;
-//  h4 {
-//    background: $slg;
-//    padding: $unit*1.5;
-//    color: $gray-dark;
-//    font-weight: bold;
-//    font-size: 1.3rem;
-//    margin: 0;
-//  }
-//  ul {
-//    display: flex;
-//    padding: 0 $unit*2;
-//    padding-left: 0;
-//    align-items: stretch;
-//    border: $border;
-//    border-top: none;
-//    margin: 0;
-//    li {
-//      //flex:1;
-//      display: flex;
-//      align-items: center;
-//      border-right: $border;
-//
-//      &:not(:first-of-type) {
-//        //margin-right: $unit*2;
-//      }
-//      padding: $unit $unit*2;
-//      position: relative;
-//
-//      &.\--active {
-//        //border: 1px solid darken($lb, 8%);
-//        //background: #000;
-//        &::before {
-//          content: '';
-//          position: absolute;
-//          height: 2px;
-//          background: $bblue;
-//          width: 100%;
-//          left: 0;
-//          top: 100%;
-//        }
-//
-//      }
-//
-//      a {
-//        display: flex;
-//        align-items: stetch;
-//      }
-//    }
-//    img {
-//      padding-right: $unit;
-//      max-width: 50px;
-//    }
-//  }
-//}
-
-//.input {
-//  display: flex;
-//  align-items: stretch;
-//  flex-direction: row;
-//  margin-bottom: $unit*2;
-//  .prompt.input_prompt {
-//    display: flex;
-//    align-items: center;
-//    padding-right: $unit;
-//  }
-//  .inner_cell {
-//    flex: 1;
-//    pre {
-//      margin-bottom: 0;
-//    }
-//  }
-//
-//}
-
-//article {
-//  padding: $unit*2;
-//  h1 {
-//    color: $blue;
-//    padding: 0;
-//    //margin:0;
-//  }
-//  img {
-//    padding: $unit*2 0;
-//  }
-//  h2 {
-//    font-size: 2rem;
-//    padding-top: $unit*4;
-//    border-top: $border;
-//    margin-top: $unit*4;
-//    padding-bottom: $unit*2;
-//  }
-//  h3 {
-//    padding: $unit*4;
-//    border: $border;
-//
-//    background: $lb;
-//  }
-//}
-
-//.similar-tutorials {
-//  border-top: $border;
-//  h4 {
-//    padding: $unit*2;
-//  }
-//  ul {
-//    display: flex;
-//    background: $lb;
-//    width: 100%;
-//    border-top: $border;
-//    li {
-//      flex: 1;
-//      display: flex;
-//      align-items: stretch;
-//      background: url(https://images.plot.ly/plotly-documentation/thumbnail/line-and-scatter.jpg);
-//      background-size: cover;
-//      span {
-//        height: 100%;
-//        display: flex;
-//        align-items: center;
-//        background: white;
-//        font-weight: bold;
-//        opacity: 0;
-//        justify-content: center;
-//        min-height: 160px;
-//        text-align: center;
-//        width: 100%;
-//        align-self: stretch;
-//        transition: 0.2s all ease-in-out;
-//      }
-//      justify-content: center;
-//      //align-items: center;
-//      min-height: 160px;
-//      border-right: $border;
-//      &:last-of-type {
-//        border-right: 0;
-//      }
-//      &:hover {
-//        //background: white;
-//        span {
-//          opacity: 0.8;
-//        }
-//      }
-//    }
-//  }
-//}
-
-//.\--meta-wrap {
-//  margin: $unit*2 0;
-//  display: flex;
-//}
-
-//.\--reference-link {
-//  display: flex;
-//  padding: $unit;
-//  border: $border;
-//  font-weight: bold;
-//
-//  div.icon {
-//    position: absolute;
-//    margin-right: $unit/2;
-//    margin-top: -3px;
-//    opacity: 0.5;
-//    svg {
-//      path {
-//        fill: currentColor;
-//
-//      }
-//    }
-//  }
-//  .\--text {
-//    margin-left: $unit*2.8;
-//    *:not(a) {
-//      display: none;
-//    }
-//
-//  }
-//  a {
-//    display: inline-block;
-//    padding-left: 6px;
-//    font-weight: normal;
-//  }
-//}
-h2.special-header{
-  padding-bottom:$unit*2;
-  margin:0;
+div.prompt{
+  padding:$unit 0;
+  font-weight:bold;
 }
-.z-depth-1{
+.highlight, .output_text {
+  pre {
+    padding: $unit*2;
+
+  }
+}
+
+h2.special-header {
+  padding-bottom: $unit*2;
+  margin: 0;
+}
+
+.z-depth-1 {
   width: 100%;
 }
-pre{
+
+pre {
   width: 100%;
-  code{
+  code {
     width: 100%;
   }
 }
+
 .page {
 
   &--single {
 
     .tutorial-content {
-      padding-left:$unit*2;
+      padding-left: $unit*2;
       * {
         //font-size: 1.1rem;
       }
@@ -243,8 +45,8 @@ pre{
         padding: $unit*2;
         margin: 0;
         position: relative;
-        img{
-          max-width:100%;
+        img {
+          max-width: 100%;
         }
         &.last {
           + h4 {
@@ -267,18 +69,18 @@ pre{
         }
         //display: block;
       }
-      a{
+      a {
         color: $bblue !important;
       }
-      ul{
-        li{
-          padding:$unit;
+      ul {
+        li {
+          padding: $unit;
         }
       }
-      p{
+      p {
 
-        strong{
-          font-weight:700 !important;
+        strong {
+          font-weight: 700 !important;
         }
       }
       table {
@@ -366,17 +168,17 @@ pre{
         }
 
       }
-      th{
-        border-bottom:$border;
-        border-top:$border;
+      th {
+        border-bottom: $border;
+        border-top: $border;
       }
-      h5{
+      h5 {
         display: block;
-        border-top:$border;
+        border-top: $border;
         background: $lb;
-        a{
-          font-size:2rem;
-          &::before{
+        a {
+          font-size: 2rem;
+          &::before {
             display: none;
           }
         }
@@ -385,42 +187,44 @@ pre{
   }
 
 }
-div.help-links{
-  a{
+
+div.help-links {
+  a {
     display: inline-block;
-    border:$border;
-    padding:$unit;
-    &:hover{
-      background:lighten($lb, 2%);
+    border: $border;
+    padding: $unit;
+    &:hover {
+      background: lighten($lb, 2%);
     }
   }
 }
-article{
-  img{
-    margin:$unit*2 0;
+
+article {
+  img {
+    margin: $unit*2 0;
   }
-  ul.toc{
+  ul.toc {
     display: flex;
-    flex-wrap:wrap;
-    margin-bottom:$unit*2;
-    border-top:$border;
-    border-right:$border;
+    flex-wrap: wrap;
+    margin-bottom: $unit*2;
+    border-top: $border;
+    border-right: $border;
     //padding-left:$unit*2;
     //padding-bottom:$unit*2;
-    li{
-      border-bottom:$border;
-      border-left:$border;
+    li {
+      border-bottom: $border;
+      border-left: $border;
       flex: 1 1 50%;
       display: flex;
       align-items: stretch;
       justify-content: flex-start;
-      a{
+      a {
         width: 100%;
-        padding:$unit*1.5;
+        padding: $unit*1.5;
         display: flex;
         align-items: center;
-        &:hover{
-          background:lighten($lb, 2%);
+        &:hover {
+          background: lighten($lb, 2%);
         }
       }
     }
