--- a/scss/_pages/_tutorial-index.scss
+++ b/scss/_pages/_tutorial-index.scss
@@ -14,6 +14,10 @@
   padding-bottom: $unit*2;
   padding-top: $unit*2;
   padding-left: $unit*2 !important;
+  padding-right:$unit*2;
+  &.tutorial-content, .tutorial-content{
+    padding:0 !important;
+  }
   .\--welcome {
     //border-bottom: $border;
     padding: $unit*2 0;
@@ -570,6 +574,7 @@ div.row {
         margin-bottom: $unit*2;
         padding-bottom: $unit*2;
         line-height: 2;
+        overflow-x: auto;
         &:first-line {
           font-size: 1.5rem;
           display: inline-block;
@@ -626,6 +631,32 @@ div.row {
 }
 
 div.section {
-  padding-left: $unit*2;
-  padding-right: $unit*4;
+  //padding-left: $unit*2;
+  //padding-right: $unit*4;
+}
+
+div.tipbox.row{
+  background: $lb;
+  padding:$unit*2;
+  padding-right:$unit*2 !important;
+  padding-left:$unit*2 !important;
+  border:$border;
+  margin-top:$unit*2;
+  //display: block;
+  h4{
+    div.icon{
+      display: none;
+    }
+    font-size:1.5rem;
+    border-bottom:0;
+    background: darken($lb, 3%);
+  }
+  a{
+    display: inline-block;
+    padding:$unit*2;
+    background: lighten($lb, 3%);
+    border: $border;
+    margin-right:$unit;
+    margin-top:$unit;
+  }
 }
