--- a/_includes/_new/_page-components/_footer-main.html
+++ b/_includes/_new/_page-components/_footer-main.html
@@ -126,4 +126,5 @@
         </div>
     </section>
 </footer>
-<script src="/js/main.js"></script>
+<script src="//images.plot.ly/assets/js/ZeroClipboard.min.js"></script>
+<script src="//images.plot.ly/assets/js/main.js"></script>
