--- a/_layouts/user-guide.html
+++ b/_layouts/user-guide.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-	{% include head.html %}
-
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</head>
-
+{% include head.html %}
 <body data-spy="scroll" data-target=".watch" style="position:relative;">
 
 <!--[if lt IE 10]>
@@ -36,7 +30,12 @@
 						</li>
 					</ul>
 					<button class="--btn back">
-						<div class="icon">Icon</div>
+						<div class="icon">
+							<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+								<path fill="#000000"
+									  d="M20,10V14H11L14.5,17.5L12.08,19.92L4.16,12L12.08,4.08L14.5,6.5L11,10H20Z"/>
+							</svg>
+						</div>
 						<span><a href="/tutorials/">Back to Tutorials</a></span>
 					</button>
 				</nav>
@@ -109,130 +108,11 @@
 
 {% include helpbox.html %}
 
+{% include _new/_page-components/insertSidebarElement.html %}
+
 {% include _new/_page-components/_footer-main.html %}
 
-<script>
 
-
-
-	var array = [];
-
-
-	$('h4').each(function (i, e) {
-		array.push($(e).text());
-	});
-
-	$('*').not('p').prev('p').addClass('last');
-
-
-	$(".--sidebar-list").html(array.map(function(value) {
-		var hash = value.replace(/[^a-z0-9\s]/gi, '').replace(/[_\s]/g, '-').toLowerCase();
-		return('<li class="--sidebar-item"><a href="#' + hash + '">' + value + '</a></li>');
-	}).join(""));
-
-
-	$("a[href^='#']").on('click', function(event) {
-		var target;
-		target = this.hash;
-
-		event.preventDefault();
-
-		var navOffset;
-		navOffset = 148;
-
-		return $('html, body').animate({
-			scrollTop: $(this.hash).offset().top - 128
-		}, 300, function() {
-			return window.history.pushState(null, null, target);
-		});
-	});
-	$("h4").append( "\<div class=\"icon copy\" data-tooltip=\"Click to copy direct link\"><svg style=\"width:24px;height:24px\" viewBox=\"0 0 24 24\"><path fill=\"#000000\" d=\"M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z\"/> </svg> </div>");
-
-	console.log('This would be the main JS file.');
-
-	// to top right away
-	if (window.location.hash) scroll(0, 0);
-	// void some browsers issue
-	setTimeout(function () {
-		scroll(0, 0);
-	}, 1);
-
-	// any position
-	$(function () {
-		// *only* if we have anchor on the url
-		if (window.location.hash) {
-			// smooth scroll to the anchor id
-			$('html, body').animate({
-				scrollTop: ($(window.location.hash).offset().top - 148) + 'px'
-			}, 1000, 'swing');
-		}
-	});
-
-
-	// Smooth Scroll
-
-
-	// Mobile Menu toggle
-
-	$('.mobile-menu-btn').on('click', function (e) {
-		$('header.header-main').toggleClass("mobile-menu");
-		$('body').toggleClass("no-scroll");
-	});
-
-
-	// Copy link to section on page
-
-	$('.copy').on('click', function (e) {
-		var link = $(this).prev();
-		copyToClipboard(link);
-		console.log('element: ' + link)
-
-		$(this).attr('data-tooltip', 'Copied!');
-
-	});
-
-	$(".copy").hover(
-			function () {
-				//$(this).attr('data-tooltip', 'Copied!');
-			},
-			function () {
-				$(this).attr('data-tooltip', 'Click to copy direct link.');
-			}
-	);
-
-	function copyToClipboard(element) {
-		var $temp = $("<input>");
-		$("body").append($temp);
-
-		$temp.val(window.location.href.split('#')[0] + $(element).attr("href")).select();
-		document.execCommand("copy");
-		$temp.remove();
-		console.log('yes');
-	}
-	$('.toggle-sidebar').on('click', function (e) {
-		$('.--sidebar-container').toggleClass("show");
-		$('.toggle-sidebar').toggleClass("on");
-
-	});
-	$('.--sidebar-container').not('.toggle-sidebar').on('click', function (e) {
-		$('.--sidebar-container').removeClass("show");
-		$('.toggle-sidebar').removeClass("on");
-		//console.log('clicked');
-	});
-
-	// Sidebar toggle
-	$(document).ready(function() {
-
-
-	});
-
-
-
-
-
-
-
-</script>
 </body>
 
 </html>
