--- a/scss/_components/_base.scss
+++ b/scss/_components/_base.scss
@@ -98,7 +98,7 @@ a {
 }
 
 h6 {
-  color: $blue;
+  //color: $blue;
   font-weight: bold;
   font-size: 1rem;
   position: relative;
@@ -134,7 +134,7 @@ h6 {
 /* Position tooltip above the element */
 [data-tooltip]:before {
   position: absolute;
-  bottom: -111%;
+  bottom: -38px;
   left: 50%;
   margin-bottom: 5px;
   margin-left: -80px;
@@ -156,7 +156,8 @@ h6 {
 /* Triangle hack to make tooltip look like a speech bubble */
 [data-tooltip]:after {
   position: absolute;
-  top: 111%;
+  top: 48px;
+  display: none;
   left: 50%;
   margin-left: -5px;
   margin-top: -7px;
@@ -176,6 +177,32 @@ h6 {
 [data-tooltip]:hover:after {
   visibility: visible;
   opacity: 1;
+  @extend .tooltip-fi;
+}
+pre{
+  position: relative;
+}
+span.copyCode{
+  top:0;
+  right:0;
+  display: flex;
+  align-items: center;
+  div.icon{
+    transform: scale(0.75);
+    opacity:0.3;
+    margin-top:2px;
+  }
+  padding:$unit;
+  border-bottom:$border;
+  border-left:$border;
+  //font-family:$op;
+  background: darken($lb, 5%);
+  position: absolute;
+  font-family:"Open Sans", sans-serif !important;
+  &.zeroclipboard-is-hover{
+    background: white;
+    cursor: pointer;
+  }
 }
 
 *:focus {
@@ -195,7 +222,12 @@ h6 {
 }
 
 .fiu {
-  //animation: fadeInUp 0.5s forwards ease-in-out;
+  animation: fadeInUp 0.5s forwards ease-in-out;
+  opacity:1 !important;
+}
+
+.tooltip-fi {
+  animation: fadeInUp 0.18s forwards ease-in-out;
   opacity:1 !important;
 }
 
