--- a/scss/_components/_sidebar.scss
+++ b/scss/_components/_sidebar.scss
@@ -820,6 +820,10 @@ aside {
         z-index: 99;
       }
       &.current {
+        background: $lb;
+        &:hover{
+          //pointer-events: none;
+        }
         &:before {
           position: absolute;
           top: 100%;
