--- a/scss/_pages/_tutorial-index.scss
+++ b/scss/_pages/_tutorial-index.scss
@@ -523,7 +523,7 @@ div.row {
   h6 {
     font-size: 2rem;
     font-weight: 100;
-    padding: $unit*2 0;
+    padding: $unit*2;
     &::before {
       display: none;
     }
@@ -651,6 +651,7 @@ div.tipbox.row{
     border-bottom:0;
     background: darken($lb, 3%);
   }
+
   a{
     display: inline-block;
     padding:$unit*2;
@@ -658,5 +659,24 @@ div.tipbox.row{
     border: $border;
     margin-right:$unit;
     margin-top:$unit;
+  }
+}
+
+section.section{
+  h4{
+    a{
+      padding:0 $unit/1.5;
+    }
+    margin-bottom:$unit*2;
+  }
+  b{
+    font-weight:600 !important;
+  }
+  div.content-box{
+    @extend p;
+    //padding:$unit*2;
+    p{
+      padding: $unit*2 0;
+    }
   }
 }
