--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,35 +1,30 @@
-//$icon-font-path: '../fonts/';
-//
+
 ////abstract
 @import "_abstract/_abstract";
-//
-//*{
-//  box-sizing: border-box;
-//}
-//
-////components
+
+//// components
+
 @import "_components/_base";
 @import "_components/_header";
 @import "_components/_foot";
 @import "_components/_sidebar";
 @import "_components/_breadcrumb";
 @import "_components/_helpbox";
-//
-//
-////pages
+
+//// pages
 
 @import "_pages/_home";
 @import "_pages/_tutorial-index";
 @import "_pages/_tutorial-single";
-//
-//// old
-//
-//@import "_old/layout_block.css";
-
+@import "_pages/_getting-started";
 
 @import url(http://help.plot.ly/stylesheets/plotly_icons.css);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
-//strong{
-//  display: inline !important;
-//  box-sizing: content-box;
-//}
+
+
+pre, code, .hljs{
+  background: $lb !important;
+  font-size:1rem;
+  line-height:1.5rem;
+
+}
