rm ggplot layout img

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -400,7 +400,9 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 </div>
 {% endif %}
 
-{% if layout_options and page.language != "ggplot2" %}
+{% else %}
+
+{% if layout_options %}
 <hr>
 <h4 class="example-section-title" id="layout-options"><a class="no_underline plot-blue" href="#layout-options">Layout Options</a></h4>
 <div class="row">
