ggplot layout edit

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -375,7 +375,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 </div>
 </div>
 
-{% else %}
+<!-- {% else %}
 
 {% if layout_options_ggplot %}
 <hr class="example-section-break">
@@ -398,7 +398,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 {% endif %}
 {% endfor %}
 </div>
-{% endif %}
+{% endif %} -->
 
 {% else %}
 
